--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 *SVN*
 
+* Make sure RAILS_ROOT is in the load path
+
 * Automate setting of the fixtures path
 
 * Load test_help instead of test/unit so that additional libraries are automatically loaded like they are in your application's tests
