--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 *SVN*
 
+*0.0.2* (August 15th, 2007)
+
 * Autoload plugin even if the plugin doesn't define an app_root
 
 * A proxy plugin for the plugin being tested is no longer needed in favor of doing selective plugin loading.
