Update rdoc formatting for README.

--- a/README
+++ b/README
@@ -15,7 +15,7 @@ Wiki
 
 Announcement
 
-* http://www.pluginaweek.org/
+* http://www.pluginaweek.org
 
 Source
 
@@ -199,6 +199,6 @@ This plugin does not depend on the presence of any other plugins.
 
 == Credits
 
-Kudos to Mark Meves over at http://rationalexuberance.org/ for working on the
+Kudos to Mark Meves over at http://rationalexuberance.org for working on the
 initial implementation of this plugin. His work has made testing our plugins so
 much easier. Thanks Mark!
