--- a/README
+++ b/README
@@ -5,10 +5,6 @@ environment that simulates its usage in a real application.
 
 == Resources
 
-Announcement
-
-* http://www.pluginaweek.org
-
 Wiki
 
 * http://wiki.pluginaweek.org/Plugin_test_helper
@@ -19,11 +15,11 @@ API
 
 Development
 
-* http://dev.pluginaweek.org/browser/trunk/plugins/test/plugin_test_helper
+* http://dev.pluginaweek.org/browser/trunk/plugin_test_helper
 
 Source
 
-* http://svn.pluginaweek.org/trunk/plugins/test/plugin_test_helper
+* http://svn.pluginaweek.org/trunk/plugin_test_helper
 
 == Description
 
@@ -191,7 +187,7 @@ Example:
 
 == Dependencies
 
-This plugin does not depend on the presence of any other plugins.
+None.
 
 == References
 
