--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,5 +1,8 @@
 == master
 
+== 0.1.5 / 2008-07-13
+
+* Don't load ActiveSupport before the environment has been initialized since it can hide problems in the plugin being tested
 * Simplify how to determine which routing file to use
 
 == 0.1.4 / 2008-06-22
