--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,5 +1,6 @@
 == master
 
+* Use the main application vendor/rails in which the plugin exists as the default vendor install if RAILS_FRAMEWORK_ROOT isn't defined [Jinzhu Zhang]
 * No longer set use_transactional_fixutres/use_instantiated_fixtures defaults since they're already set by Rails
 * Update boot file to Rails 2.1.1+ requirements (i.e. RubyGems 1.1.1+)
 * Fix tests to reference ActiveSupport::Dependencies instead of Dependencies
