--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,5 +1,7 @@
 == master
 
+* Fix fixtures not being loaded within the test application console
+
 == 0.2.0 / 2008-12-14
 
 * Remove the PluginAWeek namespace
