--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,6 +1,6 @@
 == master
 
-* Fix fixtures not being loaded within the test application console
+* Fix fixtures not being loaded within the test application console [Sergei Kozlov]
 
 == 0.2.0 / 2008-12-14
 
