--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,5 +1,6 @@
 == master
 
+* Remove init.rb since the library should never be loaded automatically
 * Fix fixtures not being loaded within the test application console [Sergei Kozlov]
 
 == 0.2.0 / 2008-12-14
