--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,5 +1,7 @@
 == master
 
+* Update migration template to match Rails template
+
 == 0.3.0 / 2009-04-13
 
 * Fix environment being loaded twice when generators are loaded
