--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,5 +1,6 @@
 == master
 
+* Release gems via rake-gemcutter instead of rubyforge
 * Fix HELPER_RAILS_ROOT path resulting in incorrect load_once_paths in Ruby 1.9+
 * Update migration template to match Rails template
 
